--- a/advanced/nextJsProjects/connectFourGame/src/app/playergameboard/PlayerGameBoard.module.css
+++ b/advanced/nextJsProjects/connectFourGame/src/app/playergameboard/PlayerGameBoard.module.css
@@ -8,10 +8,6 @@
   --playerchipcolor: var(--color-yellow);
 }
 
-.game-board-bg-container[data-playerturn=""] {
-  --playerchipcolor: transparent;
-}
-
 /* .circle-container,
 .dropped-circle-container {
   --circle-size: 80px;
